# logical-phonology

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  errors.md  feature_system.md  feature_value.md  inventory.md  loaders.md  natural_class.md  natural_class_sequence.md  natural_class_union.md  segment.md  toolkit.md  word.md
scripts/: bump_version.py  make_api_reference.py  publish.sh  publish_conda.sh  tag_release.py
src/logical_phonology/: __init__.py  errors.py  feature_matrix.py  feature_system.py  feature_value.py  inventory.py  loaders.py  natural_class.py  natural_class_sequence.py  natural_class_union.py  segment.py  toolkit.py  word.py
tests/: test_feature_matrix.py  test_feature_system.py  test_inventory.py  test_loaders.py  test_natural_class.py  test_natural_class_sequence.py  test_natural_class_union.py  test_segment.py  test_toolkit.py  test_word.py
