[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logical-phonology"
version = "0.1.0"
description = "A logical phonology library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-stub",
    "hypothesis",
    "ruff",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/logical_phonology"]
include = ["src/logical_phonology/py.typed"]

[tool.mypy]
strict = true
mypy_path = "src"