[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logical-phonology"
version = "0.2.1"
description = "A logical phonology library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-stub",
    "hypothesis",
    "ruff",
    "pydoc-markdown",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/logical_phonology"]
include = ["src/logical_phonology/py.typed"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.hatch.envs.default.scripts]
make_api_reference = "python scripts/make_api_reference.py"
publish = [
    "python scripts/bump_version.py",
    "python scripts/make_api_reference.py",
    "rm -rf dist/",
    "python -m build",
    "twine upload dist/*",
    "python scripts/tag_release.py",
]