[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logical-phonology"
version = "0.2.7"
description = "A logical phonology library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-stub",
    "hypothesis",
    "ruff",
    "pydoc-markdown",
    "build",
    "twine",

]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/logical_phonology"]
include = ["src/logical_phonology/py.typed"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.hatch.envs.default.scripts]
make_api_reference = "python scripts/make_api_reference.py"
